    Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
    Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
    Fixed incorrectly removing formatting on adjacent spaces when removing formatting on a ranged selection #TINY-6268
    Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
    Fixed some minor memory leaks that prevented garbage collection for editor instances #TINY-6570
    Fixed an issue where spaces were not preserved in pre-blocks when getting text content #TINY-6448
Version 5.5.1 (2020-10-01)
    Fixed pressing the down key near the end of a document incorrectly raising an exception #TINY-6471
    Fixed incorrect Typescript types for the `Tools` API #TINY-6475
Version 5.5.0 (2020-09-29)
    Added a TypeScript declaration file to the bundle output for TinyMCE core #TINY-3785
    Added new `table_column_resizing` setting to control how table columns are resized when using the resize bars #TINY-6001
    Added the ability to remove images on a failed upload using the `images_upload_handler` failure callback #TINY-6011
    Added `hasPlugin` function to the editor API to determine if a plugin exists or not #TINY-766
    Added new `ToggleToolbarDrawer` command and query state handler to allow the toolbar drawer to be programmatically toggled and the toggle state to be checked #TINY-6032
    Added the ability to use `colgroup` elements in tables #TINY-6050
    Added a new setting `table_use_colgroups` for toggling whether colgroups are used in new tables #TINY-6050
    Added the ability to delete and navigate HTML media elements without the `media` plugin #TINY-4211
    Added `fullscreen_native` setting to the `fullscreen` plugin to enable use of the entire monitor #TINY-6284
    Added table related oxide variables to the Style API for more granular control over table cell selection appearance #TINY-6311