@@ -12,6 +12,7 @@ Version 5.6.0 (TBD)
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
     Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
     Fixed incorrectly removing formatting on adjacent spaces when removing formatting on a ranged selection #TINY-6268
+    Fixed the `Cut` menu item not working in the latest version of Firefox #TINY-6615
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
     Fixed some minor memory leaks that prevented garbage collection for editor instances #TINY-6570
     Fixed an issue where spaces were not preserved in pre-blocks when getting text content #TINY-6448
